--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,5 +2,13 @@
   "extends": "@tsconfig/svelte/tsconfig.json",
 
   "include": ["src/**/*"],
-  "exclude": ["node_modules/*", "__sapper__/*", "public/*"]
+  "exclude": ["node_modules/*", "__sapper__/*", "public/*"],
+
+  "compilerOptions": {
+    "target": "es6",
+    "lib": [
+      "dom",
+      "es2019"
+    ]
+  }
 }
