Collapse Rollup options into one

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "build": "rollup -c",
-    "dev": "rollup -c -w",
+    "dev": "rollup -cw",
     "start": "node src/server.js",
     "validate": "svelte-check"
   },
